# tiny_imageformat

./: CMakeLists.txt  README.md  build.zig  package_main.zig
include/gfx_imageformat/: format.h  formatcracker.h
include/tiny_imageformat/: format.h  formatcracker.h  tinyimageformat.h  tinyimageformat_apis.h  tinyimageformat_base.h  tinyimageformat_bits.h  tinyimageformat_decode.h  tinyimageformat_encode.h  tinyimageformat_fetch.h  tinyimageformat_put.h  tinyimageformat_query.h
src/: decodehelpers.h  doc.h  encodehelpers.h  fetchhelpers.h  formatcracker.c  formatgen.cpp  formatgen.h  formatgen_apis.cpp  formatgen_base.cpp  formatgen_decode.cpp  formatgen_encode.cpp  formatgen_fetch.cpp  formatgen_func.h  formatgen_macros.h  formatgen_put.cpp  formatgen_query.cpp  helpers.h  otherimageenums.h  otherimageenums_d3d.h  otherimageenums_mtl.h  otherimageenums_vk.h  puthelpers.h  queryhelpers.h  vfile.h
tests/: runner.cpp  test_formatcracker.cpp
